--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </p>
   <div class="row">
     <div class="col-8">
-      <div class="collapse multi-collapse" id="multiCollapseExample1">
+      <div class="collapse multi-collapse in" id="multiCollapseExample1">
         <section class="bg-light text-dark mt-5 p-lg-0 pt-lg-5 text-center text-sm-start"> 
           <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
